--- a/static/style.css
+++ b/static/style.css
@@ -83,3 +83,48 @@ input[type="submit"]:hover, .button-container button:hover {
     margin-top: 0;
     margin-bottom: 10px;
 }
+
+.loader-container {
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader-container > div {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 50%;
+    background-color: #45a049b5;
+}
+
+.loader-1 {
+    animation: loader 0.6s linear 0.1s infinite;
+}
+
+.loader-2 {
+    animation: loader 0.6s linear 0.2s infinite;
+}
+
+.loader-3 {
+    animation: loader 0.6s linear 0.3s infinite;
+}
+
+.no-data {
+    margin-top: 20px;
+    text-align: center;
+}
+
+@keyframes loader {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
