--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="form-container">
             <h2>Bus Booking</h2>
-            <form id="busBookingForm" action="/" method="post">
+            <form id="busBookingForm" action="" method="post">
                 <div class="input-container">
                     <label for="bus_from">Starting Point:</label>
                     <select id="bus_from" name="bus_from" required>
